crates/djls-python/tests/snapshots/corpus__repos__netbox__netbox__utilities__templatetags__plugins.py.snap
---
source: crates/djls-python/tests/corpus.rs
expression: snapshot(result)
---
tag_rules:
  "netbox.utilities.templatetags.plugins::tag::plugin_alerts":
    arg_constraints:
      - Min: 2
      - Max: 2
    required_keywords: []
    choice_at_constraints: []
    known_options: ~
    extracted_args:
      - name: obj
        required: true
        kind: Variable
        position: 0
    supports_as_var: true
  "netbox.utilities.templatetags.plugins::tag::plugin_buttons":
    arg_constraints:
      - Min: 2
      - Max: 2
    required_keywords: []
    choice_at_constraints: []
    known_options: ~
    extracted_args:
      - name: obj
        required: true
        kind: Variable
        position: 0
    supports_as_var: true
  "netbox.utilities.templatetags.plugins::tag::plugin_full_width_page":
    arg_constraints:
      - Min: 2
      - Max: 2
    required_keywords: []
    choice_at_constraints: []
    known_options: ~
    extracted_args:
      - name: obj
        required: true
        kind: Variable
        position: 0
    supports_as_var: true
  "netbox.utilities.templatetags.plugins::tag::plugin_head":
    arg_constraints:
      - Max: 1
    required_keywords: []
    choice_at_constraints: []
    known_options: ~
    extracted_args: []
    supports_as_var: true
  "netbox.utilities.templatetags.plugins::tag::plugin_left_page":
    arg_constraints:
      - Min: 2
      - Max: 2
    required_keywords: []
    choice_at_constraints: []
    known_options: ~
    extracted_args:
      - name: obj
        required: true
        kind: Variable
        position: 0
    supports_as_var: true
  "netbox.utilities.templatetags.plugins::tag::plugin_list_buttons":
    arg_constraints:
      - Min: 2
      - Max: 2
    required_keywords: []
    choice_at_constraints: []
    known_options: ~
    extracted_args:
      - name: model
        required: true
        kind: Variable
        position: 0
    supports_as_var: true
  "netbox.utilities.templatetags.plugins::tag::plugin_navbar":
    arg_constraints:
      - Max: 1
    required_keywords: []
    choice_at_constraints: []
    known_options: ~
    extracted_args: []
    supports_as_var: true
  "netbox.utilities.templatetags.plugins::tag::plugin_right_page":
    arg_constraints:
      - Min: 2
      - Max: 2
    required_keywords: []
    choice_at_constraints: []
    known_options: ~
    extracted_args:
      - name: obj
        required: true
        kind: Variable
        position: 0
    supports_as_var: true
filter_arities: {}
block_specs: {}
