crates/djls-python/tests/snapshots/corpus__repos__netbox__netbox__utilities__templatetags__tabs.py.snap
---
source: crates/djls-python/tests/corpus.rs
expression: snapshot(result)
---
tag_rules:
  "netbox.utilities.templatetags.tabs::tag::model_view_tabs":
    arg_constraints:
      - Min: 2
      - Max: 2
    required_keywords: []
    choice_at_constraints: []
    known_options: ~
    extracted_args:
      - name: instance
        required: true
        kind: Variable
        position: 0
    supports_as_var: false
filter_arities: {}
block_specs: {}
